--- a/index/entrails/css/style200124.css
+++ b/index/entrails/css/style200124.css
@@ -30,7 +30,7 @@ body {
 	top:0;
       margin: 0px 0px;
 //	overflow: hidden;
-    border: 4px solid yellow;
+///////    border: 4px solid yellow;
   border-radius: 35px;
   	padding:0px;
 	}
