--- a/index/entrails/css/style200401b.css
+++ b/index/entrails/css/style200401b.css
@@ -7,7 +7,7 @@
 
 body {
     margin:0px;
-	background-color: #8888EE;
+	background-color: #88EEEE;
 }
 .container {
   //  background-color:#01f1f1;
@@ -17,7 +17,7 @@ body {
 	padding:0px;
 	// overflow-x: auto;
 	// overflow-y: hidden;
-    border: 4px solid red;
+    /////border: 4px solid red;
   border-radius: 25px;
 }
 
